第二次更新

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <!-- 第二页 -->
         <div class="section">
             <div id="two">
+                <div id="remove"><img src="img/tablebig.png" alt=""></div>
                 <div class="fontimg">
                     <img src="img/words-01-361-25.png" alt="">
                     <img src="img/words-02.png" alt="">
@@ -51,9 +52,36 @@
             </div>
         </div>
         <!-- 第三页 -->
-        <div class="section">Some section</div>
+        <div class="section">
+              <div id="three">
+                 <!-- <img src="img/threemainbig.png" alt=""> -->
+                 <img class="colortab1" src="img/threeimg-01.gif" alt="">
+                 <img class="colortab2" src="img/threeimg-01-a.gif">
+                 <img class="tableimg" src="img/table02.png" alt="">
+                 <img class="cartbtn1" src="img/btn-01.gif" alt="">
+                 <img class="cartbtn2" src="img/btn-01-a.gif" alt="">
+              </div>
+        </div>
         <!-- 第四页 -->
-        <div class="section">Some section</div>
+        <div class="section">
+            <div id="four">
+                <img src="img/cloud.png" alt="">
+                <div class="fontimg">
+                    <img src="img/words-04.png" alt="">
+                    <img src="img/words-04-a.png" alt="">
+                </div>
+                <div class="cart">
+                    <img src="img/table02.png" alt="">
+                    <img src="img/car.png" alt="">
+                </div>
+                <div class="adressform">
+                    <img src="img/t1sqosfx8bxxa9wx_i-173-47.png" alt="">
+                    <img src="img/t1.png" alt="">
+                </div>
+                
+               
+            </div>
+        </div>
         <!-- 第五页 -->
         <div class="section">Some section</div>
         <!-- 第六页 -->
