--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- 引入的  初识化css   fullpage css -->
     <!-- <link rel="stylesheet" href="css/base.css" /> -->
-    <!-- 引入自己的css  -->
+    <!--  引入自己的css  -->
 
     <link rel="stylesheet" href="js/jquery.fullpage.css" />
     <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="css/indexAfter.css">
     <!-- y这是一个jquery插件，所以先引入jquery -->
     <script src="js/jquery.min.js"></script>
     <!-- 如果想要 easing 缓动动画  那就引入 easing js -->
@@ -77,19 +78,9 @@
                 <div class="adressform">
                     <img src="img/t1sqosfx8bxxa9wx_i-173-47.png" alt="">
                     <img src="img/t1.png" alt="">
-                </div>
-                
-               
+                </div>  
             </div>
         </div>
-        <!-- 第五页 -->
-        <div class="section">Some section</div>
-        <!-- 第六页 -->
-        <div class="section">Some section</div>
-        <!-- 第七页 -->
-        <div class="section">Some section</div>
-        <!-- 第八页 -->
-        <div class="section">Some section</div>
     </div>
     <aside><a href="#"><img src="img/one01.png" alt=""></a>
         <img src="img/next.png" alt="">
